# kulisawit

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
.sqlx/: query-0aaaab86fb33d7b680a9962a0d6ac292f66aa374a5acfb7223d445f5215218f9.json  query-11768783622b932ff421c686e8af9ff55071c95bfa62cc46ea1d6aa8d61cf469.json  query-1cf9e298f74baf1c45aae4786f620b4496b9a0d026a634dbec9b3c6863f8fbc8.json  query-1fca302e9d08a48339adb5c0cc0a5e6cc65280a2666c9a4a90125a4463f827b5.json  query-2d17347aca33912d9f2f84ae04a45a0c145da7e372d1417a361320878a764ff4.json  query-60d41d64a7e90765792272856c1444206c30c447869989cf33f0ecce5a503beb.json  query-610b61e846cef3929678ee2a4fc0cb726748e8514e60de9580e61c2101e85e3e.json  query-6a3dc9d801d1bb990e691aa65e2b4f798e5634a0b28eac10d3ca8520d2366664.json  query-6bb6b528b431afbc0c2572d005fd27d40805c47c55898630fff17d86913632dd.json  query-7b3b86e4bab178b4b87bb4f082e2405b946ab01fee381c41dd4ed300baf57a6f.json  query-7b6d98008081fba568a1e74ab1c2ede55c7599965939c79ed8980e6cb582759a.json  query-7c77191f3d3e0cd9032ef6d5f6bbcfd173896566a749fdb4518821bed9380b4a.json  query-7d8453ce2e59a47800b18e4105f21d9261406f962520421533bb87021413e5b0.json  query-82a3fb4b16e64e0667f9312340005e61be656c376a738fd7caae010fc26f77b4.json  query-8ffb46e77a979c6ada0d194ccf4ba4a79cb3d51137782d978821988bc6a9ce80.json  query-96ec4be9a0c681d58acea133b4691e2f3312ff37f90e2d178022b932fc3f8937.json  query-c2f582e6d94adb118b214baa2bec5b42b27a23aae8bf15719f80a3c0dcc91f4e.json  query-c3a067de29cb78b92372cbdc93b8d899677428d751b58f0fa52a6dea124a61ef.json  query-ce75bcd2cdf9ab309524a7cbba7f3351aa351b91397b4e4e87b2ec5600b269e3.json  query-cfb3cba072367dc4e329abc2a5942aa5efcca677832422e72759b1b17512702e.json  query-db7cceb03677652b72f989ef489e1b0ef2280a76cc38f72e39f6033de0f879ba.json  query-f6634848960e13336ef929d8566efe8f5f64794b72a7169e9e1fd1a075633c94.json  query-ff184a74423a4221c972f866212ed9e671a7d2f128f64071915e28beec8b8ad8.json  query-fffe5d0f78711642361911159f698babe73e1bb969f65fbb5ed364deff4cd867.json
crates/kulisawit-agent/: Cargo.toml
crates/kulisawit-agent/src/: lib.rs  mock.rs
crates/kulisawit-agent/tests/: mock_stream.rs
crates/kulisawit-cli/: Cargo.toml
crates/kulisawit-cli/src/: main.rs
crates/kulisawit-cli/src/commands/: mod.rs  run.rs  serve.rs  version.rs
crates/kulisawit-cli/tests/: cli_help.rs  cli_run.rs
crates/kulisawit-core/: Cargo.toml
crates/kulisawit-core/src/: error.rs  ids.rs  lib.rs  status.rs
crates/kulisawit-core/src/adapter/: event.rs  mod.rs
crates/kulisawit-core/tests/: adapter_object_safety.rs
crates/kulisawit-db/: Cargo.toml
crates/kulisawit-db/src/: attempt.rs  columns.rs  error.rs  events.rs  kebun.rs  lib.rs  pool.rs  project.rs  task.rs
crates/kulisawit-db/tests/: attempt_repo.rs  attempt_transitions.rs  columns_repo.rs  concurrent_inserts.rs  events_repo.rs  kebun_repo.rs  migrations.rs  project_repo.rs  task_repo.rs  timestamp_units.rs
crates/kulisawit-git/: Cargo.toml
crates/kulisawit-git/src/: branch.rs  error.rs  lib.rs  query.rs  worktree.rs
crates/kulisawit-git/tests/: branch_commit.rs  query.rs  worktree_errors.rs  worktree_roundtrip.rs
crates/kulisawit-kuli/: Cargo.toml
crates/kulisawit-kuli/src/: lib.rs
crates/kulisawit-orchestrator/: Cargo.toml
crates/kulisawit-orchestrator/src/: broadcaster.rs  config.rs  dispatch.rs  error.rs  lib.rs  orchestrator.rs  prompt.rs  registry.rs  sortir.rs
crates/kulisawit-orchestrator/tests/: broadcaster.rs  cancel.rs  dispatch.rs  dispatch_batch.rs  prompt.rs  registry.rs  sortir.rs
crates/kulisawit-server/: Cargo.toml
crates/kulisawit-server/src/: assets.rs  error.rs  lib.rs  state.rs  wire.rs
crates/kulisawit-server/src/routes/: attempts.rs  board.rs  mod.rs  projects.rs  tasks.rs
crates/kulisawit-server/tests/: attempts.rs  board.rs  dispatch.rs  e2e.rs  embed_ui.rs  projects.rs  sse.rs  tasks.rs
docs/: PRD.md
docs/superpowers/plans/: 2026-04-18-kulisawit-implementation.md  2026-04-18-kulisawit-phase-2.md  2026-04-18-kulisawit-phase-3.1.md  2026-04-19-phase-3.2.1-foundation.md  2026-04-19-readme.md  2026-04-25-phase-3.2.2-interactivity.md  2026-04-25-phase-3.2.3-polish.md  2026-04-25-phase-3.3.1-sortir.md
docs/superpowers/specs/: 2026-04-18-kulisawit-phase-3.1-server-sse-design.md  2026-04-19-phase-3.2.1-foundation-design.md  2026-04-19-readme-design.md  2026-04-25-phase-3.2.2-interactivity-design.md  2026-04-25-phase-3.2.3-polish-design.md  2026-04-25-phase-3.3.1-sortir-design.md
migrations/: 0001_initial.sql
ui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AddTaskInline.tsx  AttemptLogViewer.tsx  EditableTitle.tsx  EmptyState.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LahanAttemptsSection.tsx  LahanDetailSheet.tsx  LahanDispatchSection.tsx  LahanInfoSection.tsx  LinkedFilesInput.tsx  ProjectSwitcher.tsx  TagsInput.tsx  TaskCard.tsx  VerificationBadge.tsx  VerificationSection.tsx
ui/src/hooks/: useAttemptEvents.ts  useBoard.ts  useCreateTask.ts  useDispatchTask.ts  useProjects.ts  useTask.ts  useTaskAttempts.ts  useUpdateTask.ts
ui/src/lib/: api.ts
ui/src/store/: ui.ts
ui/src/test/: handlers.ts  setup.ts
ui/src/types/: api.ts
ui/tests/: AddTaskInline.test.tsx  AttemptLogViewer.test.tsx  EditableTitle.test.tsx  KanbanBoard.test.tsx  LahanAttemptsSection.test.tsx  LahanDispatchSection.test.tsx  LahanInfoSection.test.tsx  LinkedFilesInput.test.tsx  ProjectSwitcher.test.tsx  TagsInput.test.tsx  TaskCard.test.tsx  VerificationBadge.test.tsx  VerificationSection.test.tsx  smoke.test.ts  useAttemptEvents.close-rule.test.tsx
