[workspace]
resolver = "2"
members = [
    "crates/kulisawit-cli",
    "crates/kulisawit-core",
    "crates/kulisawit-db",
    "crates/kulisawit-git",
    "crates/kulisawit-server",
    "crates/kulisawit-agent",
    "crates/kulisawit-orchestrator",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BimaPangestu28/kulisawit"
authors = ["Bima Pangestu"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# Web
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# DB
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "json"] }

# Git
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors / logging / CLI
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }

# Misc
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
notify = "6"
rust-embed = { version = "8", features = ["mime-guess"] }

# Test utilities
tempfile = "3"
assert_matches = "1.5"

# Internal crates
kulisawit-core   = { path = "crates/kulisawit-core",   version = "0.1.0-dev" }
kulisawit-db     = { path = "crates/kulisawit-db",     version = "0.1.0-dev" }
kulisawit-git    = { path = "crates/kulisawit-git",    version = "0.1.0-dev" }
kulisawit-server = { path = "crates/kulisawit-server", version = "0.1.0-dev" }
kulisawit-agent  = { path = "crates/kulisawit-agent",  version = "0.1.0-dev" }
kulisawit-orchestrator = { path = "crates/kulisawit-orchestrator", version = "0.1.0-dev" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = 1          # line tables only; faster links
split-debuginfo = "unpacked"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.lints.rust]
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
