[package]
name = "kulisawit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Kulisawit CLI"

[[bin]]
name = "kulisawit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
kulisawit-core.workspace = true
kulisawit-db.workspace = true
kulisawit-agent.workspace = true
kulisawit-orchestrator.workspace = true
kulisawit-server.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
