[package]
name = "kulisawit-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Kulisawit domain types, adapter trait, orchestrator"

[lib]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
